# li-assignment

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: main.py
app/api/schemas/: auth.py  base.py  search.py
app/api/v1/: deps.py
app/api/v1/routes/: search.py
app/core/: auth.py  config.py  db.py  logging.py  rate_limiter.py
app/models/: employee.py  organization.py  user.py
app/repos/: base.py  employee_repo.py  org_repo.py
app/services/: search_service.py
docs/superpowers/plans/: 2026-05-29-employee-search.md
docs/superpowers/specs/: 2026-05-29-employee-search-design.md
idea/: Technical assignment.md
tests/: conftest.py  test_rate_limiter.py  test_search_route.py  test_search_service.py
